--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,14 +51,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+ assets:
+  - assets/images/maja.jpg
+  - assets/images/lomi.jpg
+  - assets/images/chami.jpg
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
+  #uses-material-design: true
+
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
