--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
   - assets/images/Pancit_Canton_Bihon_Guisado.png
   - assets/images/Spaghetti.png
   - assets/images/sweet_and_spicy.png
+  - assets/images/plain.png
+  - assets/images/tapsilog.png
+  - assets/images/hotsilog.png
 
 
   #uses-material-design: true
